kubernetes/deployment.yml
---
  apiVersion: "apps/v1"
  kind: "Deployment"
  metadata: 
    name: "payment"
    labels: 
      app: "payment"
  spec: 
    selector: 
      matchLabels: 
        app: "payment"
    replicas: 1
    template: 
      metadata: 
        labels: 
          app: "payment"
      spec: 
        containers: 
          - 
            name: "payment"
            image: "payment"
            ports: 
              - 
                containerPort: 8080
            readinessProbe: 
              httpGet: 
                path: "/actuator/health"
                port: 8080
              initialDelaySeconds: 10
              timeoutSeconds: 2
              periodSeconds: 5
              failureThreshold: 10
            livenessProbe: 
              httpGet: 
                path: "/actuator/health"
                port: 8080
              initialDelaySeconds: 120
              timeoutSeconds: 2
              periodSeconds: 5
              failureThreshold: 5
---
  apiVersion: "v1"
  kind: "Service"
  metadata: 
    name: "payment"
    labels: 
      app: "payment"
  spec: 
    ports: 
      - 
        port: 8080
        targetPort: 8080
    selector: 
      app: "payment"
---
  apiVersion: "apps/v1"
  kind: "Deployment"
  metadata: 
    name: "movie"
    labels: 
      app: "movie"
  spec: 
    selector: 
      matchLabels: 
        app: "movie"
    replicas: 1
    template: 
      metadata: 
        labels: 
          app: "movie"
      spec: 
        containers: 
          - 
            name: "movie"
            image: "movie"
            ports: 
              - 
                containerPort: 8080
            readinessProbe: 
              httpGet: 
                path: "/actuator/health"
                port: 8080
              initialDelaySeconds: 10
              timeoutSeconds: 2
              periodSeconds: 5
              failureThreshold: 10
            livenessProbe: 
              httpGet: 
                path: "/actuator/health"
                port: 8080
              initialDelaySeconds: 120
              timeoutSeconds: 2
              periodSeconds: 5
              failureThreshold: 5
---
  apiVersion: "v1"
  kind: "Service"
  metadata: 
    name: "movie"
    labels: 
      app: "movie"
  spec: 
    ports: 
      - 
        port: 8080
        targetPort: 8080
    selector: 
      app: "movie"
---
  apiVersion: "apps/v1"
  kind: "Deployment"
  metadata: 
    name: "reservation"
    labels: 
      app: "reservation"
  spec: 
    selector: 
      matchLabels: 
        app: "reservation"
    replicas: 1
    template: 
      metadata: 
        labels: 
          app: "reservation"
      spec: 
        containers: 
          - 
            name: "reservation"
            image: "reservation"
            ports: 
              - 
                containerPort: 8080
            readinessProbe: 
              httpGet: 
                path: "/actuator/health"
                port: 8080
              initialDelaySeconds: 10
              timeoutSeconds: 2
              periodSeconds: 5
              failureThreshold: 10
            livenessProbe: 
              httpGet: 
                path: "/actuator/health"
                port: 8080
              initialDelaySeconds: 120
              timeoutSeconds: 2
              periodSeconds: 5
              failureThreshold: 5
---
  apiVersion: "v1"
  kind: "Service"
  metadata: 
    name: "reservation"
    labels: 
      app: "reservation"
  spec: 
    ports: 
      - 
        port: 8080
        targetPort: 8080
    selector: 
      app: "reservation"
---
  apiVersion: "apps/v1"
  kind: "Deployment"
  metadata: 
    name: "message"
    labels: 
      app: "message"
  spec: 
    selector: 
      matchLabels: 
        app: "message"
    replicas: 1
    template: 
      metadata: 
        labels: 
          app: "message"
      spec: 
        containers: 
          - 
            name: "message"
            image: "message"
            ports: 
              - 
                containerPort: 8080
            readinessProbe: 
              httpGet: 
                path: "/actuator/health"
                port: 8080
              initialDelaySeconds: 10
              timeoutSeconds: 2
              periodSeconds: 5
              failureThreshold: 10
            livenessProbe: 
              httpGet: 
                path: "/actuator/health"
                port: 8080
              initialDelaySeconds: 120
              timeoutSeconds: 2
              periodSeconds: 5
              failureThreshold: 5
---
  apiVersion: "v1"
  kind: "Service"
  metadata: 
    name: "message"
    labels: 
      app: "message"
  spec: 
    ports: 
      - 
        port: 8080
        targetPort: 8080
    selector: 
      app: "message"
---
  apiVersion: "apps/v1"
  kind: "Deployment"
  metadata: 
    name: "viewpage"
    labels: 
      app: "viewpage"
  spec: 
    selector: 
      matchLabels: 
        app: "viewpage"
    replicas: 1
    template: 
      metadata: 
        labels: 
          app: "viewpage"
      spec: 
        containers: 
          - 
            name: "viewpage"
            image: "viewpage"
            ports: 
              - 
                containerPort: 8080
            readinessProbe: 
              httpGet: 
                path: "/actuator/health"
                port: 8080
              initialDelaySeconds: 10
              timeoutSeconds: 2
              periodSeconds: 5
              failureThreshold: 10
            livenessProbe: 
              httpGet: 
                path: "/actuator/health"
                port: 8080
              initialDelaySeconds: 120
              timeoutSeconds: 2
              periodSeconds: 5
              failureThreshold: 5
---
  apiVersion: "v1"
  kind: "Service"
  metadata: 
    name: "viewpage"
    labels: 
      app: "viewpage"
  spec: 
    ports: 
      - 
        port: 8080
        targetPort: 8080
    selector: 
      app: "viewpage"
---
  apiVersion: "apps/v1"
  kind: "Deployment"
  metadata: 
    name: "review"
    labels: 
      app: "review"
  spec: 
    selector: 
      matchLabels: 
        app: "review"
    replicas: 1
    template: 
      metadata: 
        labels: 
          app: "review"
      spec: 
        containers: 
          - 
            name: "review"
            image: "review"
            ports: 
              - 
                containerPort: 8080
            readinessProbe: 
              httpGet: 
                path: "/actuator/health"
                port: 8080
              initialDelaySeconds: 10
              timeoutSeconds: 2
              periodSeconds: 5
              failureThreshold: 10
            livenessProbe: 
              httpGet: 
                path: "/actuator/health"
                port: 8080
              initialDelaySeconds: 120
              timeoutSeconds: 2
              periodSeconds: 5
              failureThreshold: 5
---
  apiVersion: "v1"
  kind: "Service"
  metadata: 
    name: "review"
    labels: 
      app: "review"
  spec: 
    ports: 
      - 
        port: 8080
        targetPort: 8080
    selector: 
      app: "review"
